# monorepo-demo-boardgames

./: LICENSE  README.md  test_all.py
.github/workflows/: deploy-to-gke.yml  extract-branch-names.yml  java-build.yml  java-ci.yml  java-test.yml  nodejs-build.yml  nodejs-ci.yml  nodejs-ci.ymlold  python-build.yml  python-ci.yml  python-release.yml  react-ci.yml  reactjs-ci.yml  release.yml  terraform-ci.yml  terraform-java-app.yml  terraform-nodejs-app.yml  terraform-python-app.yml  terraform-react-app.yml  test_all.yml
envs/dev/: TERRAFORM_README.md  main.tf  terraform.tfvars  variables.tf
java-boardgames-api/: .gitignore  Dockerfile  README.md  settings.gradle.kts
java-boardgames-api/app/: build.gradle.kts
k8s/test/: java-boardgames-api.yml  nodejs-boardgames-api.yml  python-boardgames-api.yml  reactjs-boardgames.yml
my-react-app-ts/: package-lock.json  package.json
nodejs-boardgames-api/: Dockerfile  README.md  config.ts  package-lock.json  package.json  tsconfig.json
nodejs-boardgames-api/src/: app.ts  routes.ts
python-boardgames-api/: .gitignore  Dockerfile  README.md  build.py  config.py  install-build.py  main.py  pyproject.toml
python-boardgames-api/app/: routes.py
python-boardgames-api/tests/: test_routes.py
react-boardgames/: .gitignore  README.md  package-lock.json  package.json  vite.config.js  worklog.txt
react-boardgames/src/: App.css  (+2 more)
reactjs-boardgames/: .gitignore  Dockerfile  README.md  config.js  jest.config.cjs  package-lock.json  package.json  playwright.config.js  vite.config.js  worklog.txt
terraform/: terraform.tfvars
(+36 files in other folders)
